--- a/app/views/shared/_personal_access_tokens_form.html.haml
+++ b/app/views/shared/_personal_access_tokens_form.html.haml
@@ -24,10 +24,10 @@
     = render 'shared/tokens/scopes_form', prefix: 'personal_access_token', token: token, scopes: scopes
 
   .form-group
-    = f.label :project_ids, 'Projects', class: 'label-bold'
+    = f.label 'personal_access_token[project_ids]', 'Projects', class: 'label-bold'
     %p
       Limit this token's access to specific projects.
-    = hidden_field_tag :project_ids, '', { class: 'js-project-multi-select project-multi-select', data: { order_by: 'last_activity_at', input_name: 'personal_access_token[project_ids]' } }
+    = hidden_field_tag 'personal_access_token[project_ids]', '', { class: 'js-project-multi-select project-multi-select', data: { order_by: 'last_activity_at' } }
 
   .prepend-top-default
     = f.submit "Create #{type} token", class: "btn btn-create"
