Move active_personal_access_tokens includes from haml to controller

--- a/app/views/shared/_personal_access_tokens_table.html.haml
+++ b/app/views/shared/_personal_access_tokens_table.html.haml
@@ -20,7 +20,7 @@
             %th Token
           %th
       %tbody
-        - active_tokens.includes(:projects).each do |token|
+        - active_tokens.each do |token|
           %tr
             %td= token.name
             %td.text-nowrap= token.created_at.to_date.to_s(:medium)
