--- a/spec/javascripts/fixtures/project_multi_select.html.haml
+++ b/spec/javascripts/fixtures/project_multi_select.html.haml
@@ -1,3 +1,6 @@
 %form
   .form-group
-    = hidden_field_tag :project_ids, '', { class: 'js-project-multi-select project-multi-select', data: { order_by: 'last_activity_at' } }
+    = label_tag 'project_ids', 'Projects', class: 'label-light'
+    .input-icon-wrapper
+      = hidden_field_tag 'project_ids', '', { class: 'js-project-multi-select project-multi-select' }
+      = sprite_icon('angle-down', css_class: 'input-icon-right caret-down')
