--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -27,12 +27,7 @@
         .col-sm-10
           = render 'shared/choose_group_avatar_button', f: f
 
-      .form-group.row
-        .col-sm-2.col-form-label
-          Visibility level
-          = link_to icon('question-circle'), help_page_path("public_access/public_access")
-        .col-sm-10
-          = render 'shared/visibility_level', f: f, visibility_level: @group.visibility_level, can_change_visibility_level: can_change_group_visibility_level?(@group), form_model: @group, with_label: false
+      = render 'shared/old_visibility_level', f: f, visibility_level: @group.visibility_level, can_change_visibility_level: can_change_group_visibility_level?(@group), form_model: @group, with_label: false
 
       = render 'create_chat_team', f: f if Gitlab.config.mattermost.enabled
 
