--- a/app/views/groups/settings/_permissions.html.haml
+++ b/app/views/groups/settings/_permissions.html.haml
@@ -3,7 +3,7 @@
   = form_errors(@group)
 
   %fieldset
-    %h5 Permissions
+    %h5= ('Permissions')
     .form-group
       = render 'shared/allow_request_access', form: f
 
