--- a/app/views/groups/settings/_lfs.html.haml
+++ b/app/views/groups/settings/_lfs.html.haml
@@ -1,7 +1,7 @@
 - docs_link_url = help_page_path('workflow/lfs/manage_large_binaries_with_git_lfs')
 - docs_link_start = '<a href="%{url}" target="_blank" rel="noopener noreferrer">'.html_safe % { url: docs_link_url }
 
-%h5 Large File Storage
+%h5= _('Large File Storage')
 
 %p= s_('Check the %{docs_link_start}documentation%{docs_link_end}.').html_safe % { docs_link_start: docs_link_start, docs_link_end: '</a>'.html_safe }
 
@@ -10,6 +10,6 @@
     = f.check_box :lfs_enabled, checked: @group.lfs_enabled?, class: 'form-check-input'
     = f.label :lfs_enabled, class: 'form-check-label' do
       %span
-        Allow projects within this group to use Git LFS
+        = _('Allow projects within this group to use Git LFS')
       %br/
-      %span.text-muted This setting can be overridden in each project.
+      %span.text-muted= _('This setting can be overridden in each project.')
