--- a/app/views/groups/settings/_two_factor_auth.html.haml
+++ b/app/views/groups/settings/_two_factor_auth.html.haml
@@ -1,7 +1,7 @@
 - docs_link_url = help_page_path('security/two_factor_authentication', anchor: 'enforcing-2fa-for-all-users-in-a-group')
 - docs_link_start = '<a href="%{url}" target="_blank" rel="noopener noreferrer">'.html_safe % { url: docs_link_url }
 
-%h5 Two-factor authentication
+%h5= _('Two-factor authentication')
 
 %p= s_('Check the %{docs_link_start}documentation%{docs_link_end}.').html_safe % { docs_link_start: docs_link_start, docs_link_end: '</a>'.html_safe }
 
@@ -9,9 +9,8 @@
   .form-check
     = f.check_box :require_two_factor_authentication, class: 'form-check-input'
     = f.label :require_two_factor_authentication, class: 'form-check-label' do
-      %span
-        Require all users in this group to setup Two-factor authentication
+      %span= _('Require all users in this group to setup Two-factor authentication')
 .form-group
   = f.label :two_factor_grace_period, _('Time before enforced'), class: 'label-bold'
   = f.text_field :two_factor_grace_period, class: 'form-control w-25'
-  .form-text.text-muted Amount of time (in hours) that users are allowed to skip forced configuration of two-factor authentication
+  .form-text.text-muted= _('Amount of time (in hours) that users are allowed to skip forced configuration of two-factor authentication')
