--- a/app/views/shared/_allow_request_access.html.haml
+++ b/app/views/shared/_allow_request_access.html.haml
@@ -3,6 +3,6 @@
 .form-check
   = form.check_box :request_access_enabled, class: 'form-check-input'
   = form.label :request_access_enabled, class: 'form-check-label' do
-    %span{ class: label_class } Allow users to request access
+    %span{ class: label_class }= _('Allow users to request access')
     %br
-    %span.text-muted Allow users to request access if visibility is public or internal.
+    %span.text-muted= _('Allow users to request access if visibility is public or internal.')
