--- a/app/views/shared/snippets/_form.html.haml
+++ b/app/views/shared/snippets/_form.html.haml
@@ -14,12 +14,7 @@
 
     = render 'shared/form_elements/description', model: @snippet, project: @project, form: f
 
-    .form-group.row
-      .col-sm-2.col-form-label
-        Visibility level
-        = link_to icon('question-circle'), help_page_path("public_access/public_access")
-      .col-sm-10
-        = render 'shared/visibility_level', f: f, visibility_level: @snippet.visibility_level, can_change_visibility_level: true, form_model: @snippet, with_label: false
+    = render 'shared/old_visibility_level', f: f, visibility_level: @snippet.visibility_level, can_change_visibility_level: true, form_model: @snippet, with_label: false
 
     .file-editor
       .form-group.row
