--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -5,7 +5,7 @@
 
 %section.settings.gs-general.no-animate#js-general-settings{ class: ('expanded') }
   .settings-header
-    %h4.js-settings-toggle.js-settings-toggle-trigger-only
+    %h4.settings-title.js-settings-toggle.js-settings-toggle-trigger-only
       = _('Naming, visibility')
     %button.btn.js-settings-toggle{ type: 'button' }
       = _('Collapse')
@@ -16,7 +16,7 @@
 
 %section.settings.gs-permissions.no-animate#js-permissions-settings{ class: ('expanded' if expanded) }
   .settings-header
-    %h4.js-settings-toggle.js-settings-toggle-trigger-only
+    %h4.settings-title.js-settings-toggle.js-settings-toggle-trigger-only
       = _('Permissions, LFS, 2FA')
     %button.btn.js-settings-toggle{ type: 'button' }
       = expanded ? _('Collapse') : _('Expand')
@@ -25,9 +25,9 @@
   .settings-content
     = render 'groups/settings/permissions'
 
-%section.settings.no-animate{ class: ('expanded' if expanded) }
+%section.settings.no-animate#js-badge-settings{ class: ('expanded' if expanded) }
   .settings-header
-    %h4
+    %h4.settings-title.js-settings-toggle.js-settings-toggle-trigger-only
       = s_('GroupSettings|Badges')
     %button.btn.js-settings-toggle{ type: 'button' }
       = expanded ? 'Collapse' : 'Expand'
@@ -39,7 +39,7 @@
 
 %section.settings.gs-advanced.no-animate#js-advanced-settings{ class: ('expanded' if expanded) }
   .settings-header
-    %h4.js-settings-toggle.js-settings-toggle-trigger-only
+    %h4.settings-title.js-settings-toggle.js-settings-toggle-trigger-only
       = _('Path, transfer, remove')
     %button.btn.js-settings-toggle{ type: 'button' }
       = expanded ? _('Collapse') : _('Expand')
