--- a/app/views/groups/settings/_general.html.haml
+++ b/app/views/groups/settings/_general.html.haml
@@ -12,22 +12,21 @@
         = f.label :id, _('Group ID'), class: 'label-bold'
         = f.text_field :id, class: 'form-control', readonly: true
 
-    .row.mt-2
-      .form-group.col-md-9
+    .row.prepend-top-8
+      .form-group.col-md-9.append-bottom-0
         = f.label :description, _('Group description (optional)'), class: 'label-bold'
         = f.text_area :description, class: 'form-control', rows: 3, maxlength: 250
 
     = render_if_exists 'shared/repository_size_limit_setting', form: f, type: :group
 
-    .form-group.row.mt-3.mb-4
-      .col-sm-12
-        .avatar-container.s90
-          = group_icon(@group, alt: '', class: 'avatar group-avatar s90')
-        = f.label :avatar, _('Group avatar'), class: 'label-bold d-block'
-        = render 'shared/choose_group_avatar_button', f: f
-        - if @group.avatar?
-          %hr
-          = link_to _('Remove avatar'), group_avatar_path(@group.to_param), data: { confirm: _('Avatar will be removed. Are you sure?')}, method: :delete, class: 'btn btn-danger btn-inverted'
+    .form-group.prepend-top-default.append-bottom-default
+      .avatar-container.s90
+        = group_icon(@group, alt: '', class: 'avatar group-avatar s90')
+      = f.label :avatar, _('Group avatar'), class: 'label-bold d-block'
+      = render 'shared/choose_group_avatar_button', f: f
+      - if @group.avatar?
+        %hr
+        = link_to _('Remove avatar'), group_avatar_path(@group.to_param), data: { confirm: _('Avatar will be removed. Are you sure?')}, method: :delete, class: 'btn btn-danger btn-inverted'
 
     = render 'shared/visibility_level', f: f, visibility_level: @group.visibility_level, can_change_visibility_level: can_change_group_visibility_level?(@group), form_model: @group
 
