--- a/app/views/groups/settings/_lfs.html.haml
+++ b/app/views/groups/settings/_lfs.html.haml
@@ -5,7 +5,7 @@
 
 %p= s_('Check the %{docs_link_start}documentation%{docs_link_end}.').html_safe % { docs_link_start: docs_link_start, docs_link_end: '</a>'.html_safe }
 
-.form-group.mb-4
+.form-group.append-bottom-default
   .form-check
     = f.check_box :lfs_enabled, checked: @group.lfs_enabled?, class: 'form-check-input'
     = f.label :lfs_enabled, class: 'form-check-label' do
