--- a/app/views/groups/settings/_permissions.html.haml
+++ b/app/views/groups/settings/_permissions.html.haml
@@ -3,11 +3,11 @@
   = form_errors(@group)
 
   %fieldset
-    %h5= ('Permissions')
+    %h5= _('Permissions')
     .form-group
       = render 'shared/allow_request_access', form: f
 
-    .form-group.mb-4
+    .form-group.append-bottom-default
       .form-check
         = f.check_box :share_with_group_lock, disabled: !can_change_share_with_group_lock?(@group), class: 'form-check-input'
         = f.label :share_with_group_lock, class: 'form-check-label' do
@@ -21,4 +21,4 @@
     = render 'groups/settings/two_factor_auth', f: f
     = render_if_exists 'groups/member_lock_setting', f: f, group: @group
 
-  = f.submit _('Save changes'), class: 'btn btn-success mt-4 js-dirty-submit'
+  = f.submit _('Save changes'), class: 'btn btn-success prepend-top-default js-dirty-submit'
