--- a/app/views/shared/_visibility_level.html.haml
+++ b/app/views/shared/_visibility_level.html.haml
@@ -2,10 +2,12 @@
 
 .form-group.visibility-level-setting
   - if with_label
-    = f.label :visibility_level, _('Visibility level'), class: 'label-bold mb-0'
+    = f.label :visibility_level, _('Visibility level'), class: 'label-bold append-bottom-0'
     %p
       = _('Who can see this group?')
-      = link_to _('Check the documentation'), help_page_path("public_access/public_access"), target: '_blank'
+      - visibility_docs_path = help_page_path('public_access/public_access')
+      - visibility_docs_link_start = '<a href="%{url}" target="_blank" rel="noopener noreferrer">'.html_safe % { url: visibility_docs_path }
+      = s_('Check the %{visibility_docs_link_start}documentation%{group_docs_link_end}.').html_safe % { visibility_docs_link_start: visibility_docs_link_start, group_docs_link_end: '</a>'.html_safe }
   - if can_change_visibility_level
     = render('shared/visibility_radios', model_method: :visibility_level, form: f, selected_level: visibility_level, form_model: form_model)
   - else
