--- a/app/views/users/_overview.html.haml
+++ b/app/views/users/_overview.html.haml
@@ -1,31 +1,32 @@
 .row
   .col-sm-6
-    %h4.prepend-top-20
-      Activity
-    .calender-block.row-content-block.top-block.white.d-none.d-sm-block
-      .user-calendar{ data: { calendar_path: user_calendar_path(@user, :json), calendar_activities_path: user_calendar_activities_path, utc_offset: Time.zone.utc_offset } }
-        %h4.center.light
-          %i.fa.fa-spinner.fa-spin
-        .user-calendar-activities
+    .calender-block
+      .content-block.hide-bottom-border.d-none.d-sm-block
+        %h4
+          Activity
+        .user-calendar{ data: { calendar_path: user_calendar_path(@user, :json), calendar_activities_path: user_calendar_activities_path, utc_offset: Time.zone.utc_offset } }
+          %h4.center.light
+            %i.fa.fa-spinner.fa-spin
+          .user-calendar-activities
 
     - if can?(current_user, :read_cross_project)
       .activities-block
-        .row-content-block.white.second-block.d-none.d-sm-block
+        .content-block.d-none.d-sm-block
           %h5.prepend-top-10
             Recent contributions
           .overview_content_list{ data: { href: user_overview_activities_path } }
             %h4.center.light
               %i.fa.fa-spinner.fa-spin
-        .row.prepend-top-10
+        .prepend-top-10
           = link_to 'View all', user_path, class: "hide js-view-all"
 
   .col-sm-6
-    %h4.prepend-top-20
-      Personal projects
     .projects-block
-      .row-content-block.top-block.white.d-none.d-sm-block
-        .overview_content_list{ data: { href: user_projects_path } }
+      .content-block.d-none.d-sm-block
+        %h4
+          Personal projects
+        .overview_content_list{ data: { href: user_overview_projects_path } }
           %h4.center.light
           %i.fa.fa-spinner.fa-spin
-        .row.prepend-top-10
-          = link_to 'View all', user_projects_path, class: "hide js-view-all"
+      .prepend-top-10
+        = link_to 'View all', user_projects_path, class: "hide js-view-all"
