Prevents checkbox from being toggled on icon click

--- a/app/assets/stylesheets/pages/profile.scss
+++ b/app/assets/stylesheets/pages/profile.scss
@@ -437,4 +437,14 @@ table.u2f-registrations {
       }
     }
   }
+
+  .inline-wrapper {
+    .checkbox {
+      display: inline;
+
+      label {
+        display: inline;
+      }
+    }
+  }
 }
