Removes 'overview_projects' controller method, reuse 'projects' instead

--- a/app/views/users/_overview.html.haml
+++ b/app/views/users/_overview.html.haml
@@ -25,7 +25,7 @@
       .content-block.d-none.d-sm-block
         %h4
           Personal projects
-        .overview_content_list{ data: { href: user_overview_projects_path } }
+        .overview_content_list{ data: { href: user_projects_path } }
           %h4.center.light
             %i.fa.fa-spinner.fa-spin
       .prepend-top-10
