Removes 'overview_activities' controller method and utilizes pager

--- a/app/views/users/_overview.html.haml
+++ b/app/views/users/_overview.html.haml
@@ -14,7 +14,7 @@
         .content-block.d-sm-block
           %h5.prepend-top-10
             Recent contributions
-          .overview_content_list{ data: { href: user_overview_activities_path } }
+          .overview_content_list{ data: { href: user_path } }
             %h4.center.light
               %i.fa.fa-spinner.fa-spin
         .prepend-top-10
