--- a/app/views/layouts/header/_current_user_dropdown.html.haml
+++ b/app/views/layouts/header/_current_user_dropdown.html.haml
@@ -5,9 +5,17 @@
     .user-name.bold
       = current_user.name
     = current_user.to_reference
+    .user-status-emoji.has-tooltip{ title: current_user.status.message_html, data: { html: 'true', placement: 'bottom' } }
+      = emoji_icon current_user.status.emoji
+      = current_user.status.message
   %li.divider
   - if can?(current_user, :update_user_status, current_user)
-    .js-set-status-modal-trigger
+    %li
+      %button.js-set-user-status-button.btn.menu-link{ type: 'button',
+        data: { target: '#set-user-status-modal',
+                container: 'body',
+                toggle: 'modal' } }
+        = s_('SetStatusModal|Set a status')
   - if current_user_menu?(:profile)
     %li
       = link_to s_("CurrentUser|Profile"), current_user, class: 'profile-link', data: { user: current_user.username }
