--- a/app/views/users/_overview.html.haml
+++ b/app/views/users/_overview.html.haml
@@ -18,7 +18,7 @@
             %h4.center.light
               %i.fa.fa-spinner.fa-spin
         .prepend-top-10
-          = link_to 'View all', user_path, class: "hide js-view-all"
+          = link_to 'View all', user_activity_path, class: "hide js-view-all"
 
   .col-md-6.col-sm-12
     .projects-block
