--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,22 +12,22 @@
   .cover-block.user-cover-block.top-area
     .cover-controls
       - if @user == current_user
-        = link_to profile_path, class: 'btn btn-default has-tooltip', title: 'Edit profile', 'aria-label': 'Edit profile' do
+        = link_to profile_path, class: 'btn btn-default has-tooltip', title: s_('UserProfile|Edit profile'), 'aria-label': 'Edit profile' do
           = icon('pencil')
       - elsif current_user
         - if @user.abuse_report
-          %button.btn.btn-danger{ title: 'Already reported for abuse',
+          %button.btn.btn-danger{ title: s_('UserProfile|Already reported for abuse'),
             data: { toggle: 'tooltip', placement: 'bottom', container: 'body' } }
             = icon('exclamation-circle')
         - else
           = link_to new_abuse_report_path(user_id: @user.id, ref_url: request.referrer), class: 'btn',
-            title: 'Report abuse', data: { toggle: 'tooltip', placement: 'bottom', container: 'body' } do
+            title: s_('UserProfile|Report abuse'), data: { toggle: 'tooltip', placement: 'bottom', container: 'body' } do
             = icon('exclamation-circle')
       - if can?(current_user, :read_user_profile, @user)
-        = link_to user_path(@user, rss_url_options), class: 'btn btn-default has-tooltip', title: 'Subscribe', 'aria-label': 'Subscribe' do
+        = link_to user_path(@user, rss_url_options), class: 'btn btn-default has-tooltip', title: s_('UserProfile|Subscribe'), 'aria-label': 'Subscribe' do
           = icon('rss')
       - if current_user && current_user.admin?
-        = link_to [:admin, @user], class: 'btn btn-default', title: 'View user in admin area',
+        = link_to [:admin, @user], class: 'btn btn-default', title: s_('UserProfile|View user in admin area'),
           data: {toggle: 'tooltip', placement: 'bottom', container: 'body'} do
           = icon('users')
 
@@ -51,7 +51,7 @@
               @#{@user.username}
             - if can?(current_user, :read_user_profile, @user)
               %span.middle-dot-divider
-                Member since #{@user.created_at.to_date.to_s(:long)}
+                = s_('Member since %{date}') % { date: @user.created_at.to_date.to_s(:long) }
 
         .cover-desc
           - unless @user.public_email.blank?
@@ -94,27 +94,27 @@
           - if profile_tab?(:overview)
             %li.js-overview-tab
               = link_to user_path, data: { target: 'div#overview', action: 'overview', toggle: 'tab' } do
-                Overview
+                = s_('UserProfile|Overview')
           - if profile_tab?(:activity)
             %li.js-activity-tab
               = link_to user_activity_path, data: { target: 'div#activity', action: 'activity', toggle: 'tab' } do
-                Activity
+                = s_('UserProfile|Activity')
           - if profile_tab?(:groups)
             %li.js-groups-tab
               = link_to user_groups_path, data: { target: 'div#groups', action: 'groups', toggle: 'tab', endpoint: user_groups_path(format: :json) } do
-                Groups
+                = s_('UserProfile|Groups')
           - if profile_tab?(:contributed)
             %li.js-contributed-tab
               = link_to user_contributed_projects_path, data: { target: 'div#contributed', action: 'contributed', toggle: 'tab', endpoint: user_contributed_projects_path(format: :json) } do
-                Contributed projects
+                = s_('UserProfile|Contributed projects')
           - if profile_tab?(:projects)
             %li.js-projects-tab
               = link_to user_projects_path, data: { target: 'div#projects', action: 'projects', toggle: 'tab', endpoint: user_projects_path(format: :json) } do
-                Personal projects
+                = s_('UserProfile|Personal projects')
           - if profile_tab?(:snippets)
             %li.js-snippets-tab
               = link_to user_snippets_path, data: { target: 'div#snippets', action: 'snippets', toggle: 'tab', endpoint: user_snippets_path(format: :json) } do
-                Snippets
+                = s_('UserProfile|Snippets')
 
   %div{ class: container_class }
     .tab-content
@@ -132,7 +132,7 @@
 
           - if can?(current_user, :read_cross_project)
             %h4.prepend-top-20
-              Most Recent Activity
+              = s_('UserProfile|Most Recent Activity')
             .content_list{ data: { href: user_path } }
             = spinner
 
@@ -163,4 +163,4 @@
       .col-12.text-center
         .text-content
           %h4
-            This user has a private profile
+            = s_('UserProfile|This user has a private profile')
